fix(styles): card spacing issues

--- a/packages/styles/scss/components/_card.scss
+++ b/packages/styles/scss/components/_card.scss
@@ -7,7 +7,6 @@
   $self: &;
   $transition-timing: 150ms;
   margin: 0;
-  max-width: px-to-rem(920px);
 
   .right-to-left & {
     text-align: right;
